--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <!--
@@ -10,8 +11,10 @@
     * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
       * Enable inline JS: add 'unsafe-inline' to default-src
   -->
-  <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 
   <meta name="theme-color" content="#007aff">
   <meta name="format-detection" content="telephone=no">
@@ -20,7 +23,7 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="icon" type="image/x-icon" href="static/logo-circle.png"/>
+  <link rel="icon" type="image/x-icon" href="static/logo-circle.png" />
   <link rel="icon" href="static/logo-circle.png" type="image/png" sizes="16x16">
   <script src="assets/vendor/pace/pace.min.js"></script>
   <!--vendors-->
@@ -29,6 +32,7 @@
 
   <!-- built styles file will be auto injected -->
 </head>
+
 <body class="sidebar-pinned page-home">
   <div id="app"></div>
 
@@ -55,4 +59,5 @@
   <script src="assets/vendor/datedropper/datedropper.min.js"></script>
   <script src="assets/vendor/timepicker/bootstrap-timepicker.min.js"></script>
 </body>
+
 </html>
