--- a/src/pages/about/about.f7.html
+++ b/src/pages/about/about.f7.html
@@ -1,49 +1,49 @@
 <template>
-<div class="page" data-name="about">
-  <div class="page-content">
-    <div class="bg-dark m-b-30">
-      <div class="container">
-        <div class="row p-b-60 p-t-60">
-          <div class="col-md-6 text-white p-b-30">
-            <div class="media">
-              <div class="avatar avatar mr-3">
-                <div class="avatar-title bg-success rounded-circle mdi mdi-widgets  ">
+  <div class="page" data-name="about">
+    <div class="page-content">
+      <div class="bg-dark m-b-30">
+        <div class="container">
+          <div class="row p-b-60 p-t-60">
+            <div class="col-md-6 text-white p-b-30">
+              <div class="media">
+                <div class="avatar avatar mr-3">
+                  <div class="avatar-title bg-success rounded-circle mdi mdi-widgets  ">
+                  </div>
                 </div>
-              </div>
-              <div class="media-body">
-                <h1>CBH Library Manager</h1>
-                <div class="text-overline opacity-75">
-                  Giới thiệu hệ thống
+                <div class="media-body">
+                  <h1>CBH Library Manager</h1>
+                  <div class="text-overline opacity-75">
+                    Giới thiệu hệ thống
+                  </div>
+                  <p class="opacity-75">
+                  </p>
                 </div>
-                <p class="opacity-75">
-                </p>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 text-md-right text-white">
-            <p class="m-t-10">
-              <a href="#" class="btn btn-white-translucent">HOME PAGE</a>
-            </p>
-          </div>
+            <div class="col-md-6 text-md-right text-white">
+              <p class="m-t-10">
+                <a href="#" class="btn btn-white-translucent">HOME PAGE</a>
+              </p>
+            </div>
 
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="container pull-up">
-      <div class="row">
-        <div class="col-lg-8 m-b-30">
-          <div class="card m-b-30">
-<!--            <div class="card-header m-b-20">-->
-<!--              <h5 class="m-b-0 m-t-10">-->
-<!--                <i class="mdi mdi-account-card-details"></i> -->
-<!--              </h5>-->
-<!--            </div>-->
-            <div class="card-body products">
-              <div class="row d-flex">
+      <div class="container pull-up">
+        <div class="row">
+          <div class="col-lg-8 m-b-30">
+            <div class="card m-b-30">
+              <!--            <div class="card-header m-b-20">-->
+              <!--              <h5 class="m-b-0 m-t-10">-->
+              <!--                <i class="mdi mdi-account-card-details"></i> -->
+              <!--              </h5>-->
+              <!--            </div>-->
+              <div class="card-body products">
+                <div class="row d-flex">
                   <div class="col-md-4 text-center m-t-15">
                     <div class="avatar avatar-xxl">
-                      <img src="static/logo-circle.png" alt="image"/>
+                      <img src="static/logo-circle.png" alt="image" />
                     </div>
                   </div>
                   <div class="col-md-8">
@@ -51,80 +51,84 @@
                       <h5 class="card-title"> Giới thiệu CBH Library Manager</h5>
                       <div class="card-text">
                         <strong>CBH Library Manager</strong> <span class="more">
-                          là một tiện ích mình tạo ra để giúp phần nào đội ngũ câu lạc bộ CBN Bookaholic Home quản lý việc mượn, kiểm sách dễ dàng và tiện lợi hơn. Tiện ích có thể khá phèn do trình độ mình cũng có hạn nhưng dù sao cũng là tâm huyết của mình dành cho câu lạc bộ nên hãy tiếp nhận nó nhé :v Và với bất kỳ lỗi hay điểm gì khiến bạn không ưng thì cứ thoải mái liên hệ với tớ nhé :v Chúc câu lạc bộ sẽ tiến xa hơn và thành công nha ^^
+                          là một tiện ích mình tạo ra để giúp phần nào đội ngũ câu lạc bộ CBN Bookaholic Home quản lý
+                          việc mượn, kiểm sách dễ dàng và tiện lợi hơn. Tiện ích có thể khá phèn do trình độ mình cũng
+                          có hạn nhưng dù sao cũng là tâm huyết của mình dành cho câu lạc bộ nên hãy tiếp nhận nó nhé :v
+                          Và với bất kỳ lỗi hay điểm gì khiến bạn không ưng thì cứ thoải mái liên hệ với tớ nhé :v Chúc
+                          câu lạc bộ sẽ tiến xa hơn và thành công nha ^^
                         </span>
-                      </p>
-                      <button class="btn btn-primary" id="toggle">Rút gọn</button>
+                        </p>
+                        <button class="btn btn-primary" id="toggle">Rút gọn</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 m-b-30">
+              <div class="card m-b-30">
+                <div class="card">
+                  <div class="card-media ">
+                    <div class="card-media text-center">
+                      <div class="avatar avatar avatar-xxl m-t-20 ">
+                        <img class="rounded-circle" src="https://i.imgur.com/4UcYe2q.png" alt="Card image cap" />
+                      </div>
                     </div>
                   </div>
 
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 m-b-30">
-          <div class="card m-b-30">
-            <div class="card">
-              <div class="card-media ">
-                <div class="card-media text-center">
-                  <div class="avatar avatar avatar-xxl m-t-20 ">
-                    <img class="rounded-circle" src="https://i.imgur.com/4UcYe2q.png"
-                         alt="Card image cap"/>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card-body">
-                <div class="text-center" style="font-size: 18px">
-                  <p>Thông tin tác giả  </p>
-                </div>
-                <div class="timeline timeline-xs ">
-                  <div class="timeline-item">
-                    <div class="timeline-wrapper">
-                      <div class="">
-                        <div class="avatar avatar-sm">
-                          <div class="avatar-title rounded-circle">
-                            <i class="mdi mdi-account mdi-17px"></i>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-auto">
-                        <p class="m-0">Nguyễn Duy Bảo</p>
-                      </div>
+                  <div class="card-body">
+                    <div class="text-center" style="font-size: 18px">
+                      <p>Thông tin tác giả </p>
                     </div>
-                  </div>
-                  <div class="timeline-item">
-                    <div class="timeline-wrapper">
-                      <div class="">
-                        <div class="avatar avatar-sm">
-                          <div class="avatar-title bg-success rounded-circle">
-                            <i class="mdi mdi-home"></i>
+                    <div class="timeline timeline-xs ">
+                      <div class="timeline-item">
+                        <div class="timeline-wrapper">
+                          <div class="">
+                            <div class="avatar avatar-sm">
+                              <div class="avatar-title rounded-circle">
+                                <i class="mdi mdi-account mdi-17px"></i>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-auto">
+                            <p class="m-0">Nguyễn Duy Bảo</p>
                           </div>
                         </div>
                       </div>
-                      <div class="col-auto">
-                        <p class="m-0">Trường THPT chuyên Bắc Ninh</p>
+                      <div class="timeline-item">
+                        <div class="timeline-wrapper">
+                          <div class="">
+                            <div class="avatar avatar-sm">
+                              <div class="avatar-title bg-success rounded-circle">
+                                <i class="mdi mdi-home"></i>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-auto">
+                            <p class="m-0">Trường THPT chuyên Bắc Ninh</p>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="card m-b-30">
-            <div class="card-header">
-              <div class="card-title d-flex align-items-center">
-                <div class="avatar mr-3 avatar-sm">
-                  <div class="avatar-title bg-dark rounded-circle">
-                    <i class="mdi mdi-phone-bluetooth mdi-18px"></i>
+              <div class="card m-b-30">
+                <div class="card-header">
+                  <div class="card-title d-flex align-items-center">
+                    <div class="avatar mr-3 avatar-sm">
+                      <div class="avatar-title bg-dark rounded-circle">
+                        <i class="mdi mdi-phone-bluetooth mdi-18px"></i>
+                      </div>
+                    </div>
+                    <div class="">
+                      <div class="name"><span>Liên hệ</span></div>
+                    </div>
                   </div>
-                </div>
-                <div class="">
-                  <div class="name"><span>Liên hệ</span></div>
+                  <hr>
                 </div>
               </div>
-              <hr></div>
-            </div>
               <div class="list-group list list-group-flush mt-0">
                 <div class="list-group-item d-flex  align-items-center">
                   <div class="m-r-20">
@@ -164,7 +168,8 @@
                   </div>
                   <div class="">
                     <div class="name"><span>Facebook</span></div>
-                    <div class="text-muted"><a href="#" @click="${() => {openLink('https://www.facebook.com/jayremnt/')}}">Nguyễn Duy Bảo</a></div>
+                    <div class="text-muted"><a href="#"
+                        @click="${() => {openLink('https://www.facebook.com/jayremnt/')}}">Nguyễn Duy Bảo</a></div>
                   </div>
                 </div>
 
@@ -178,23 +183,24 @@
                   </div>
                   <div class="">
                     <div class="name"><span>Instagram</span></div>
-                    <div class="text-muted"><a href="#" @click="${() => {openLink('https://www.instagram.com/jayremnt/')}}">Nguyễn Duy Bảo</a></div>
+                    <div class="text-muted"><a href="#"
+                        @click="${() => {openLink('https://www.instagram.com/jayremnt/')}}">Nguyễn Duy Bảo</a></div>
                   </div>
                 </div>
               </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 </template>
 <script>
   export default () => {
     let $ = window.$;
     let state = false;
-    $(document).ready(function() {
-      $("#toggle").click(function() {
+    $(document).ready(function () {
+      $("#toggle").click(function () {
         var elem = $("#toggle").text();
         if (state) {
           //Stuff to do when btn is in the read more state
@@ -210,7 +216,7 @@
     });
 
     const openLink = (url) => {
-    	window.open(url, '_blank');
+      window.open(url, '_blank');
     }
     return $render;
   };
