--- a/src/pages/account/change-password.f7.html
+++ b/src/pages/account/change-password.f7.html
@@ -28,8 +28,7 @@
                     </p>
                     ${isChangeRequest && $h`
                     <div class="form-row">
-                      <div class="alert ${isChanged?'alert-success':'alert-danger'}"
-                           role="alert">
+                      <div class="alert ${isChanged?'alert-success':'alert-danger'}" role="alert">
                         ${returnMessage}
                       </div>
                     </div>
@@ -37,37 +36,30 @@
                     <a href="#" class="">
                       <label class="avatar-input">
                         <span class="avatar avatar-xl">
-                          <img
-                            src="http://www.gravatar.com/avatar/${md5(Clm.account['email'])}?s=64"
-                            alt="..."
-                            class="avatar-img rounded-circle"/>
+                          <img src="http://www.gravatar.com/avatar/${md5(Clm.account['email'])}?s=64" alt="..."
+                            class="avatar-img rounded-circle" />
                           <span class="avatar-input-icon rounded-circle">
-                              <i class="mdi mdi-upload mdi-24px"></i>
+                            <i class="mdi mdi-upload mdi-24px"></i>
                           </span>
                         </span>
                       </label>
                     </a>
                     <div class="form-group">
                       <label for="old-password">Mật khẩu hiện tại</label>
-                      <input @change="${updateOldPassword}" type="password"
-                             class="form-control" name="old-password" id="old-password"
-                             placeholder="Mật khẩu hiện tại..."/>
+                      <input @change="${updateOldPassword}" type="password" class="form-control" name="old-password"
+                        id="old-password" placeholder="Mật khẩu hiện tại..." />
                     </div>
                     <div class="form-group">
                       <label for="new-password">Mật khẩu mới</label>
-                      <input @change="${updateNewPassword}"
-                             type="password" class="form-control" name="new-password"
-                             id="new-password"
-                             placeholder="Mật khẩu mới..."/>
+                      <input @change="${updateNewPassword}" type="password" class="form-control" name="new-password"
+                        id="new-password" placeholder="Mật khẩu mới..." />
                     </div>
                     <div class="form-group">
                       <label for="new-password-again">Nhập lại mật khẩu mới</label>
-                      <input @change="${updateConfirmPassword}" type="password"
-                             class="form-control" name="new-password-again"
-                             id="new-password-again" placeholder="Nhập lại mật khẩu mới..."/>
+                      <input @change="${updateConfirmPassword}" type="password" class="form-control"
+                        name="new-password-again" id="new-password-again" placeholder="Nhập lại mật khẩu mới..." />
                     </div>
-                    <button name="save" value="ok" type="submit"
-                            class="btn btn m-b-15 ml-2 mr-2 btn-primary">Lưu lại
+                    <button name="save" value="ok" type="submit" class="btn btn m-b-15 ml-2 mr-2 btn-primary">Lưu lại
                     </button>
                   </form>
 
@@ -85,7 +77,7 @@
 
   const md5 = require("md5");
 
-  export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
+  export default function (props, { $f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted }) {
     let isChangeRequest = false;
     let isChanged = false;
     let returnMessage = "";
