--- a/src/pages/books/book-trace.f7.html
+++ b/src/pages/books/book-trace.f7.html
@@ -21,38 +21,37 @@
                 <div class="table-responsive">
                   <table class="table table-hover ">
                     <thead>
-                    <tr>
-                      <th>ID</th>
-                      <th>Người mượn</th>
-                      <th>Ngày mượn</th>
-                      <th>Hết hạn</th>
-                      <th>Trạng thái</th>
-                      <th>Lần gia hạn</th>
-                      <th>Phụ trách</th>
-                      <th>Ngày tạo</th>
-                      <th>Hành động</th>
-                    </tr>
+                      <tr>
+                        <th>ID</th>
+                        <th>Người mượn</th>
+                        <th>Ngày mượn</th>
+                        <th>Hết hạn</th>
+                        <th>Trạng thái</th>
+                        <th>Lần gia hạn</th>
+                        <th>Phụ trách</th>
+                        <th>Ngày tạo</th>
+                        <th>Hành động</th>
+                      </tr>
                     </thead>
                     <tbody>
-                    ${traces.map((trace, i) => $h`
-                    <tr>
-                      <td>${i + 1}</td>
-                      <td>${trace.borrower?.name}</td>
-                      <td>${Clm.timeConverter(trace.borrowed_time)}</td>
-                      <td>${Clm.timeConverter(trace.expired_time)}</td>
-                      <td>${(trace.is_borrowing) ? "Mượn sách" : (trace.is_return) ? "Trả sách" : "Gia hạn"}</td>
-                      <td>${trace.extended_times}</td>
-                      <td>${trace.responsible_person ? trace?.responsible_person?.name : ""}</td>
-                      <td>${Clm.timeConverter(trace.created_time)}</td>
-                      <td>
-                        <a href="/borrowers/info/${trace.borrower?.student_code}/"
-                           class="btn btn-primary btn-sm"
-                           role="button">
-                          <i class="mdi mdi-human-male"></i>
-                        </a>
-                      </td>
-                    </tr>
-                    `)}
+                      ${traces.map((trace, i) => $h`
+                      <tr>
+                        <td>${i + 1}</td>
+                        <td>${trace.borrower?.name}</td>
+                        <td>${Clm.timeConverter(trace.borrowed_time)}</td>
+                        <td>${Clm.timeConverter(trace.expired_time)}</td>
+                        <td>${(trace.is_borrowing) ? "Mượn sách" : (trace.is_return) ? "Trả sách" : "Gia hạn"}</td>
+                        <td>${trace.extended_times}</td>
+                        <td>${trace.responsible_person ? trace?.responsible_person?.name : ""}</td>
+                        <td>${Clm.timeConverter(trace.created_time)}</td>
+                        <td>
+                          <a href="/borrowers/info/${trace.borrower?.student_code}/" class="btn btn-primary btn-sm"
+                            role="button">
+                            <i class="mdi mdi-human-male"></i>
+                          </a>
+                        </td>
+                      </tr>
+                      `)}
                     </tbody>
                   </table>
                 </div>
@@ -68,7 +67,7 @@
 <script>
   import Clm from "../../js/clm";
 
-  export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
+  export default function (props, { $f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted }) {
     const bookCode = props.bookCode;
     let traces = [];
     let alert = false;
