--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -10,8 +10,8 @@
                   Tất cả người mượn
                 </h5>
                 <div class="card-controls">
-                  <input class="btn" id="borrowerSearch" type="text"
-                         placeholder="Tìm kiếm..." style="margin-right: 10px;"/>
+                  <input class="btn" id="borrowerSearch" type="text" placeholder="Tìm kiếm..."
+                    style="margin-right: 10px;" />
                   <a href="/borrowers/add/" class="btn btn-info">Thêm người mượn</a>
                 </div>
               </div>
@@ -26,54 +26,53 @@
                 <div class="table-responsive" style="margin-top: 20px;">
                   <table class="table table-hover">
                     <thead>
-                    <tr>
-                      <th>ID</th>
-                      <th>Tên</th>
-                      <th>Lớp</th>
-                      <th>Mã học sinh</th>
-                      <th>Điện thoại</th>
-                      <th>Email</th>
-                      <th>Số sách</th>
-                      <th>Ngày hết hạn gần nhất</th>
-                      <th>Hành động</th>
-                    </tr>
+                      <tr>
+                        <th>ID</th>
+                        <th>Tên</th>
+                        <th>Lớp</th>
+                        <th>Mã học sinh</th>
+                        <th>Điện thoại</th>
+                        <th>Email</th>
+                        <th>Số sách</th>
+                        <th>Ngày hết hạn gần nhất</th>
+                        <th>Hành động</th>
+                      </tr>
                     </thead>
                     <tbody id="listBorrowers">
-                    ${borrowers.map((borrower, i) => $h`
-                    <tr>
-                      <td>${i + 1}</td>
-                      <td>${borrower.name}</td>
-                      <td>${borrower.class}</td>
-                      <td>${borrower.student_code}</td>
-                      <td>${borrower.phone_number}</td>
-                      <td>${borrower.email}</td>
-                      <td>${borrower.current_borrowed_books.length}</td>
-                      <td>${borrower.min_expired_time ? borrower.min_expired_time >= new
-                        Date().getTime() ? `${Math.floor((borrower.min_expired_time - new
-                        Date().getTime()) /
-                        (24 * 60 * 60 * 1000))
-                        + 1} ngày` : `${Math.floor((new
-                        Date().getTime() - borrower.min_expired_time ) /
-                        (24 * 60 * 60 * 1000))
-                        + 1} ngày trước` : `Không`}
-                      </td>
-                      <td>
-                        <a href="/borrowers/info/${borrower.student_code}/" class="btn btn-primary btn-sm"
-                           role="button">
-                          <i class="mdi mdi-menu"></i>
-                        </a>
-                        <a href="/borrowers/trace/${borrower.student_code}/" class="btn btn-dark btn-sm"
-                           role="button">
-                          <i class="mdi mdi-history"></i>
-                        </a>
-                        <button @click="${deleteBorrower}" type="button" class="btn btn-danger btn-sm"
-                                data-toggle="modal" data-target="#delete"
-                                data-student-code="${borrower.student_code}">
-                          <i class="mdi mdi-delete"></i>
-                        </button>
-                      </td>
-                    </tr>
-                    `)}
+                      ${borrowers.map((borrower, i) => $h`
+                      <tr>
+                        <td>${i + 1}</td>
+                        <td>${borrower.name}</td>
+                        <td>${borrower.class}</td>
+                        <td>${borrower.student_code}</td>
+                        <td>${borrower.phone_number}</td>
+                        <td>${borrower.email}</td>
+                        <td>${borrower.current_borrowed_books.length}</td>
+                        <td>${borrower.min_expired_time ? borrower.min_expired_time >= new
+                          Date().getTime() ? `${Math.floor((borrower.min_expired_time - new
+                          Date().getTime()) /
+                          (24 * 60 * 60 * 1000))
+                          + 1} ngày` : `${Math.floor((new
+                          Date().getTime() - borrower.min_expired_time ) /
+                          (24 * 60 * 60 * 1000))
+                          + 1} ngày trước` : `Không`}
+                        </td>
+                        <td>
+                          <a href="/borrowers/info/${borrower.student_code}/" class="btn btn-primary btn-sm"
+                            role="button">
+                            <i class="mdi mdi-menu"></i>
+                          </a>
+                          <a href="/borrowers/trace/${borrower.student_code}/" class="btn btn-dark btn-sm"
+                            role="button">
+                            <i class="mdi mdi-history"></i>
+                          </a>
+                          <button @click="${deleteBorrower}" type="button" class="btn btn-danger btn-sm"
+                            data-toggle="modal" data-target="#delete" data-student-code="${borrower.student_code}">
+                            <i class="mdi mdi-delete"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      `)}
                     </tbody>
                   </table>
                 </div>
@@ -89,7 +88,7 @@
 <script>
   import Clm from "../../js/clm";
 
-  export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
+  export default function (props, { $f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted }) {
     let borrowers = [];
     let alert = false;
     let alertSuccess = false;
