--- a/src/pages/dynamic-route.f7.html
+++ b/src/pages/dynamic-route.f7.html
@@ -14,7 +14,8 @@
     </div>
     <div class="page-content">
       <div class="block block-strong">
-        <p>Component page template is compiled as ES Template. In addition it has lifecycle hooks, events handling, data managment and Virtual DOM data bindings.</p>
+        <p>Component page template is compiled as ES Template. In addition it has lifecycle hooks, events handling, data
+          managment and Virtual DOM data bindings.</p>
         <p>It is useful to use Component page when you need page-specific logic.</p>
       </div>
       <div class="block-title">Events Handling</div>
@@ -61,7 +62,7 @@
   }
 </style>
 <script>
-  export default function (props, {$f7, $on, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted }) {
+  export default function (props, { $f7, $on, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted }) {
     // Component Data
     let name = 'Jimmy';
     let age = 25;
